--- a/index.html
+++ b/index.html
@@ -34,5 +34,17 @@
 		</div>
 	</aside>
 
+	<section>
+		<div class="div1"></div>
+		<div class="div2"></div>
+		<div class="div3"></div>
+		<div class="div4"></div>
+		<div class="div5"></div>
+		<div class="div6">
+			<img src="star.png" width="50px" alt="">
+			<p>Fighting</p>
+		</div>
+	</section>
+
 </body>
 </html>
